Roles with JWT auth added