@@ -3,20 +3,26 @@ package com.b2bapp.grocery.security;
 import com.b2bapp.grocery.model.User;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 @RequiredArgsConstructor
 public class UserDetailsImpl implements UserDetails {
 
     private final User user;
 
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // Optional: map roles to authorities
+        // Convert enum role to "ROLE_RETAILER", "ROLE_WHOLESALER", etc.
+        return List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()));
     }
+
+
 
     @Override
     public String getPassword() {
